@@ -1,3 +1,4 @@
+file_android.cc  Android boot.img file support
 file_aout.cc  a.out executable file support
 file_ecoff.cc  ECOFF file support
 file_elf.cc  ELF file support
