@@ -1,5 +1,6 @@
 machine_algor.cc  Algorithmic P4032 and P5064 evaluation boards
 machine_alpha.cc  DEC Alpha machines
+machine_androidarm.cc  ARM-based "Android" machines
 machine_arc.cc  ARC (Advanced RISC Computing) machines
 machine_cats.cc  Simtec Electronics' CATS board
 machine_cobalt.cc  Cobalt (MIPS-based)
